--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "firebase": "^10.5.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
@@ -23,9 +22,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run compile-sass && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile-sass": "node-sass ./src/style -o ./public/css && npm run prefix",
+    "prefix": "postcss ./public/css/*.css --use autoprefixer -d ./public/css/prefixed/"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +48,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.12.1",
+    "autoprefixer": "^10.4.16",
     "css-loader": "^6.8.1",
+    "node-sass": "^7.0.3",
+    "postcss-cli": "^10.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
