--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,10 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "build",
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }],
     "ignore": [
       "firebase.json",
       "**/.*",
